# ImgEffects

./: Cargo.toml  build.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/dither/: mod.rs
core/src/dither/diffusion/: floyd_steinberg.rs
core/src/dither/ordered/: bayer.rs  bayer_matrices.rs  mod.rs
guessTheNumber/: .rustc_info.json  Cargo.toml
gui/: Cargo.toml
gui/src/: main.rs
src/: dither.rs  main.rs
src/dither/: OrderedDither.rs  mod.rs
src/dither/diffusion/: floyd_steinberg.rs  mod.rs
src/dither/ordered/: bayer.rs  mod.rs
variables/src/: main.rs
