[package]
name = "ImgEffects"
version = "0.1.0"
edition = "2024"

[dependencies]
image = {version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "gif",
    "ico",
    "tiff"
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
