[package]
name = "ImgEffects"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
image = {version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "gif",
    "ico",
    "tiff"
] }
rfd = "0.15.4"

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
